--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
 
     <h1>My First Website</h1>
+    <h2>My Second Heading</h2>
     <p>My first paragraph.</p>
-
+    <l> Hello world! </l>
   </body>
 </html>
